# Project-X

./: CMakeLists.txt  CatchTests.cpp.gcda  CatchTests.cpp.gcno  Game.cpp  Game.h  README.md  main.cpp
.github/workflows/: c-cpp.yml  cmake.yml  codeql-analysis.yml
Components/: AnimationComponent.h  MovementComponent.cpp  MovementComponent.h
Headers/: Entity.h  Game.h  Player.h
Linux/: readme
Resources/: Button.cpp  Button.h
Source/: Entity.cpp  Game.cpp  Player.cpp  main.cpp
States/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
Tests/: CatchTests.cpp
docs/: CMakeLists.txt  Doxyfile.in  conf.py
doxygen/html/: AnimationComponent_8h_source.html  Button_8h_source.html  Entity_8h_source.html  GameState_8h_source.html  Game_8h_source.html  MainMenuState_8h_source.html  MovementComponent_8h_source.html  Player_8h_source.html  State_8h_source.html  annotated.html  classAnimationComponent-members.html  classAnimationComponent.html  classButton-members.html  classButton.html  classEntity-members.html  classEntity.html  classGame-members.html  classGame.html  classGameState-members.html  classGameState.html  classMainMenuState-members.html  classMainMenuState.html  classMovementComponent-members.html  classMovementComponent.html  classPlayer-members.html  classPlayer.html  classState-members.html  classState.html  classes.html  dir_fb0004967dbfeb5e6917fe56e65f3841.html  files.html  functions.html  functions_func.html  hierarchy.html
doxygen/html/search/: all_0.js  all_4.js  all_6.js  classes_3.js  functions_1.js  searchdata.js
doxygen/latex/: AnimationComponent_8h_source.tex  Button_8h_source.tex  Entity_8h_source.tex  GameState_8h_source.tex  Game_8h_source.tex  MainMenuState_8h_source.tex  MovementComponent_8h_source.tex  Player_8h_source.tex  State_8h_source.tex  annotated.tex  classAnimationComponent.tex  classButton.tex  classEntity.eps  classEntity.tex  classGame.tex  classGameState.tex  classMainMenuState.tex  classMovementComponent.tex  classPlayer.tex  classState.eps  classState.tex  files.tex  hierarchy.tex  refman.tex
doxygen/xml/: AnimationComponent_8cpp.xml  AnimationComponent_8h.xml  Button_8cpp.xml  Button_8h.xml  CatchTests_8cpp.xml  Doxyfile.xml  Entity_8cpp.xml  Entity_8h.xml  GameState_8cpp.xml  GameState_8h.xml  Game_8cpp.xml  Game_8h.xml  MainMenuState_8cpp.xml  MainMenuState_8h.xml  MovementComponent_8cpp.xml  MovementComponent_8h.xml  Player_8cpp.xml  Player_8h.xml  State_8cpp.xml  State_8h.xml  classAnimationComponent.xml  classAnimationComponent_1_1Animation.xml  classButton.xml  classEntity.xml  classGame.xml  classGameState.xml  classMainMenuState.xml  classMovementComponent.xml  classPlayer.xml  classState.xml  dir_fb0004967dbfeb5e6917fe56e65f3841.xml  index.xml  main_8cpp.xml
gamelib/: AnimationComponent.cpp  Button.cpp  Button.h  CMakeLists.txt  CatchTests.cpp  Game.h  GameState.h  MainMenuState.cpp  MainMenuState.h  MovementComponent.cpp  MovementComponent.h  Player.cpp  main.cpp
gamelib/html-doxygen/: _animation_component_8cpp.html  _animation_component_8cpp_source.html  _animation_component_8h.html  _animation_component_8h.js  _animation_component_8h_source.html  _button_8cpp.html  _button_8cpp_source.html  _button_8h.html  _button_8h.js  _button_8h_source.html  _c_make_lists_8txt.html  _catch_tests_8cpp.html  _catch_tests_8cpp.js  _catch_tests_8cpp_source.html  _entity_8cpp.html  _entity_8cpp_source.html  _entity_8h.html  _entity_8h_source.html  _game_8cpp.html  _game_8cpp_source.html  _game_8h.html  _game_8h_source.html  _game_state_8cpp.html  _game_state_8cpp_source.html  _game_state_8h.html  _game_state_8h_source.html  _main_menu_state_8cpp.html  _main_menu_state_8cpp_source.html  _main_menu_state_8h.html  _main_menu_state_8h_source.html  _movement_component_8cpp.html  _movement_component_8cpp_source.html  _movement_component_8h.html  _movement_component_8h.js  _movement_component_8h_source.html  _player_8cpp.html  _player_8cpp_source.html  _player_8h.html  _player_8h_source.html  _state_8cpp.html  (+55 more)
gamelib/html-doxygen/search/: all_0.js  all_1.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_4.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  (+13 more)
sphinx/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  index.doctree
sphinx/_sources/: index.rst.txt
sphinx/_static/: documentation_options.js
tests/: CMakeLists.txt  CatchTests.cpp
windows/: CMakeLists.txt  main.cpp
